--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,3 +1,13 @@
+body {
+    font-family: 'Roboto Mono', monospace;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 .auth-body {
     background-color: #22b4a8;
     padding: 0px;
@@ -7,6 +17,13 @@
 .body {
     padding: 0px;
     margin: 0px;
+}
+
+#app {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: relative;
 }
 
 .navbar {
@@ -21,7 +38,6 @@
 .navbar-btn {
     text-decoration: none;
     font-size: large;
-    font-family: 'Roboto Mono', monospace;
     color: #6200EE;
     font-weight: 600;
     padding: 10px 5px 10px 5px;
@@ -34,6 +50,10 @@
     border-color: #6200EE;
     background-color: #f3ebff;
     border-radius: 3px;
+}
+
+.nav-link-auth {
+    margin-right: 55px;
 }
 
 .nav-link:hover {
@@ -53,14 +73,18 @@
 }
 
 .index-content {
-    font-family: 'Roboto Mono', monospace;
     font-size: 50px;
-
 }
 
 .auth-navbar {
     box-shadow: 0px 1px 1px #d3e0e9;
     background-color: #ffffff;
+    position: fixed;
+    width: 100vw;
+}
+
+.auth-main {
+    margin-top: 30vh;
 }
 
 .auth-container {
@@ -68,18 +92,89 @@
     margin: 50px;
     border-radius: 4px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    height: 100vh;
 }
 
 .auth-image {
-    height: 500px;
-    width: 500px;
+    height: 100vh;
+    width: 50%;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    flex: 1;
 }
 
-#app {
+.auth-content {
+    flex: 1;
+}
+
+.card {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    position: relative;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.card-header {
+    font-size: large;
+    text-transform: uppercase;
+    align-content: center;
+    margin-bottom: 20px;
+}
+
+.card-body {
+    align-self: center;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-group {
+    margin-bottom: 18px;
+    padding: 10px 20px 10px 20px;
+}
+
+.btn-primary {
+    color: #ffffff;
+    background-color: #6200EE;
+    border-radius: 3px;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: bold;
+}
+.forgot-password-btn{
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width: 1090px) {
+    .auth-container {
+        background-color: #ffffff;
+        margin: 50px;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        height: 100vh;
+        flex-direction: column;
+    }
+
+    .auth-image {
+        height: 50vh;
+        width: 50%;
+        border-radius: 0px;
+        flex: 1;
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 50vh;
+    }
 }
